# ur

./: .gitignore  LICENSE  Makefile  README.md  diff.diff  menu_poc.py  pyproject.toml
ur/: game.py  network.py  play.py  saves.py  simulate.py
ur/ai/: bots.py  environment.py
ur/cli/: board.py  constants.py  i18n.py  match.py  menu.py  play.py  protocol.py  session.py  splash.py  tutorial.py  utils.py  widgets.py
ur/cli/flows/: match.py  menu.py  tutorial.py
ur/cli/tui/: board.py  constants.py  i18n.py  output.py  splash.py  utils.py  widgets.py
ur/game/: engine.py  rules.py  rules_cross.py
ur/lan/: protocol.py  web.py  web_client.html
ur/online/: README.md  client.py  server.py  web_client.html
ur/online/frontend/: index.html  package-lock.json  package.json  vite.config.js
ur/online/frontend/src/: App.css  App.jsx
ur/online/frontend/src/components/: ConnectionDot.jsx
ur/online/frontend/src/components/game/: Board.jsx  Dice.jsx  Game.jsx  GameOver.jsx  GameStatus.jsx  PlayerStrip.jsx
ur/online/frontend/src/components/lobby/: ColorSwatches.jsx  GameList.jsx  Lobby.jsx
ur/online/frontend/src/hooks/: useWebSocket.js
ur/online/frontend/src/store/: reducer.js
ur/poc/: board_cross.py  bots3.py  engine3.py  play3.py  play_cross.py  rules3.py
ur/storage/: saves.py  session.py
ur/tests/: test_engine.py  test_network.py  test_online.py  test_play.py
